# OpenCV

examples/: CMakeLists.txt  FindOpenCV.cmake  alphablend.cpp  example2-1.cpp  example2-2.cpp  example2-3.cpp  example2-4.cpp  example2-5.cpp  example2-6.cpp
